--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search">search</string>
+    <string name="public_use">Public Use</string>
+    <string name="store_retailer">Store retailer</string>
+    <string name="administrator">Administrator</string>
+    <string name="sign_in">sign in</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
 </resources>
