--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,12 @@
     <string name="sign_in">sign in</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
+    <string name="submit">SUBMIT</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="End">End</string>
+    <string name="start">Start</string>
+    <string name="browse">Browse</string>
+    <string name="image_name">Image Name</string>
+    <string name="duration">Duration</string>
 </resources>
